--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
+    "react-dark-mode-toggle": "0.0.4",
     "react-dom": "^16.13.1",
     "react-redux": "^7.1.0-rc.1",
     "react-scripts": "3.4.1",
