--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "moment": "^2.25.3",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dark-mode-toggle": "0.0.4",
     "react-dom": "^16.13.1",
